data/derived/fa15/progs/unify/prog1310.ml.out
Characters 76-78:
  | Sine e -> sin(pi*eva;(e,x,y))
                  ^^
Error: This expression has type float but an expression was expected of type
         int
